added companyManager role
